refactor: 인터셉터 userId로 수정